test/library/standard/Reflection/getFieldRef-param.2.good
getFieldRef-param.chpl:17: error: cannot return a reference to 'param' field 'x'
